--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&icon_names=person,vpn_key&display=block" />
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -16,8 +17,21 @@
             <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post">
-
+                <form action="login.php" method="post" autocomplete="on">
+                    <div id="campo">
+                        <I class="material-symbols-outlined">person</I>
+                        <input type="email" name="login" id="ilogin" placeholder="digite seu e-mail" autocomplete="email" maxlength="30" required>
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div id="campo">
+                        <I class="material-symbols-outlined">vpn_key</I>
+                        <input type="password" name="senha" id="isenha" placeholder="digite sua senha" autocomplete="current-password" minlength="8" required>
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">
+                        Esqueci minha senha 
+                    </a>
                 </form>
             </div>
         </section>
