--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
-                    <div id="campo">
+                    <div class="campo">
                         <I class="material-symbols-outlined">person</I>
                         <input type="email" name="login" id="ilogin" placeholder="digite seu e-mail" autocomplete="email" maxlength="30" required>
                         <label for="ilogin">Login</label>
                     </div>
-                    <div id="campo">
+                    <div class="campo">
                         <I class="material-symbols-outlined">vpn_key</I>
                         <input type="password" name="senha" id="isenha" placeholder="digite sua senha" autocomplete="current-password" minlength="8" required>
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="botao">
                         Esqueci minha senha 
                     </a>
                 </form>
